ansible/rke/livros-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: movies-service
  labels:
    app: movies-services
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
    #nodePort: 30007
  selector:
    app: movies
