ansible/rke/livro-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: livro-ing
spec:
  ingressClassName: nginx
  rules:
  - host: livros.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: movies-service
            port: 
              number: 80
